fixed bug that was causing the margins to fail on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,10 @@ body,
 #root,
 .app {
   background-color: #f0f0f0;
+  font-family: 'Source Sans 3', sans-serif;
 }
 .content {
-  height: 100%;
+  height: 90%;
   width: 100%;
   font-family: 'Source Sans 3', sans-serif;
 }
